# codeflow-agent

./: AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  mvp-spec.md  roadmap.md
examples/calculator_bug/src/: calculator.py
examples/calculator_bug/tests/: test_calculator.py
openspec/: config.yaml
openspec/changes/add-patch-review-apply/: design.md  proposal.md  tasks.md
openspec/changes/add-patch-review-apply/specs/patch-review-apply/: spec.md
openspec/changes/add-read-only-repo-agent/: design.md  proposal.md  tasks.md
openspec/changes/add-read-only-repo-agent/specs/repo-inspection/: spec.md
openspec/changes/add-test-feedback-loop/: design.md  proposal.md  tasks.md
openspec/changes/add-test-feedback-loop/specs/test-feedback-loop/: spec.md
src/codeflow_agent/: __init__.py  apply_mode.py  cli.py  fix_mode.py  git_tools.py  patch_apply.py  patch_generator.py  patch_mode.py  patch_review.py  patch_validation.py  paths.py  plan_mode.py  planner.py  results.py  state.py  test_runner.py  tools.py
tests/: test_apply_mode.py  test_cli.py  test_fix_mode.py  test_patch_mode.py  test_plan_mode.py  test_pytest_collection.py  test_results_and_paths.py  test_test_runner.py  test_tools.py
