[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codeflow-agent"
version = "0.1.0"
description = "Minimal local coding agent foundation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["langgraph>=1.2,<2"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
codeflow = "codeflow_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
